--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,5 +1,8 @@
-body{
-    background-color: rgb(247, 243, 243);
-   // margin: 0;
+// body{
+//     background-color: rgb(247, 243, 243);
+//    // margin: 0;
 
-}
+// }
+// h1{
+//     margin: 0;
+// }
