--- a/src/styles/templates/image-section.scss
+++ b/src/styles/templates/image-section.scss
@@ -1,18 +1,20 @@
-.slide{
-    display: flex;
-
+.image-section{
+    position: relative;
+    &__img{
+        margin: 0;
+    }
     &__image{
-        width:650px;
-        height:300px;
+        transform: scaleX(-1);
+        width: 1255px;
+        height: 500px;
+        display: block;
 
     }
     &__text{
-        // font-size: 1.5em;
-        color: limegreen;
-        margin-left: auto;
-        width: 35%;
-        display: flex;
-        flex-direction: column;
+        position: absolute;;
+        text-align: center;
+        top: 100px;
+        width:650px;
         justify-content: space-between;
     }
 }
