--- a/src/styles/componentes/logo.scss
+++ b/src/styles/componentes/logo.scss
@@ -12,6 +12,7 @@
         path {
             stroke: black;
             stroke-width: 2px;
+            stroke-miterlimit: 10px;
         }
     }
 }
