--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -45,7 +45,7 @@
 }
 .image-section__image {
   transform: scaleX(-1);
-  width: 1255px;
+  width: 100%;
   height: 500px;
   display: block;
 }
@@ -59,17 +59,27 @@
 
 .obrigada {
   position: relative;
-  display: inline-block;
+}
+.obrigada__logo {
+  margin: 0;
 }
 .obrigada__img {
-  max-width: 100%;
-  margin: 10px;
+  width: 100%;
+  display: block;
+}
+.obrigada__text__span {
+  right: 130px;
+  top: 10%;
+  bottom: 10%;
+  position: absolute;
+  font-size: 20px;
+  margin-left: auto;
 }
 .obrigada__text {
+  right: 130px;
+  top: 10%;
+  bottom: 10%;
   position: absolute;
-  text-align: right;
-  top: 100px;
-  width: 450px;
 }
 
 .item1 {
@@ -181,6 +191,21 @@
   text-align: center;
   margin: 2px;
 }
+.button__cadastro {
+  display: flex;
+  font-weight: 600;
+  color: #ebe4e3;
+  background-color: #24cc40;
+  padding: 10px;
+  text-decoration: none;
+  white-space: nowrap;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-family: Arial;
+  width: 65px;
+  margin-left: auto;
+}
 
 .logo {
   display: flex;
@@ -208,7 +233,7 @@
 .rodape__infor .rodape__infor_text {
   vertical-align: middle;
   display: inline;
-  margin-right: 60px;
+  margin-right: 100px;
 }
 .rodape__message {
   color: #7b7b7b;
