--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,8 +1,5 @@
-// body{
-//     background-color: rgb(247, 243, 243);
-//    // margin: 0;
+body{
+    background-color: #f3f3f3;
+   // margin: 0;
 
-// }
-// h1{
-//     margin: 0;
-// }
+}
