--- a/src/styles/templates/image-section.scss
+++ b/src/styles/templates/image-section.scss
@@ -5,7 +5,7 @@
     }
     &__image{
         transform: scaleX(-1);
-        width: 1255px;
+        width: 100%;
         height: 500px;
         display: block;
 
