--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -206,6 +206,20 @@
   width: 65px;
   margin-left: auto;
 }
+.button__obrigado {
+  display: flex;
+  color: #ebe4e3;
+  background-color: #24cc40;
+  padding: 10px;
+  text-decoration: none;
+  white-space: nowrap;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-family: Arial;
+  width: 110px;
+  margin-left: auto;
+}
 
 .logo {
   display: flex;
