--- a/src/styles/componentes/button.scss
+++ b/src/styles/componentes/button.scss
@@ -28,5 +28,19 @@
         width: 65px;
         margin-left: auto;
     }
+    &__obrigado{
+        display: flex;
+        color: #ebe4e3;
+        background-color: #24cc40;
+        padding: 10px;
+        text-decoration: none;
+        white-space: nowrap;
+        border-radius: 10px;
+        text-transform: uppercase;
+        font-size: 10px;
+        font-family: Arial;
+        width: 110px;
+        margin-left: auto;
+    }
 }
 
