--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -66,6 +66,7 @@
 .obrigada__img {
   width: 100%;
   display: block;
+  border-radius: 30px;
 }
 .obrigada__text__span {
   right: 130px;
@@ -209,7 +210,7 @@
 .button__obrigado {
   display: flex;
   color: #ebe4e3;
-  background-color: #24cc40;
+  background-color: #db65ae;
   padding: 10px;
   text-decoration: none;
   white-space: nowrap;
