--- a/src/styles/componentes/button.scss
+++ b/src/styles/componentes/button.scss
@@ -31,7 +31,7 @@
     &__obrigado{
         display: flex;
         color: #ebe4e3;
-        background-color: #24cc40;
+        background-color: #db65ae;
         padding: 10px;
         text-decoration: none;
         white-space: nowrap;
