--- a/src/styles/templates/obrigado.scss
+++ b/src/styles/templates/obrigado.scss
@@ -4,10 +4,10 @@
         margin: 0;
     }
 
-    &__img{
-    
+    &__img{   
         width: 100%;
         display: block;
+        border-radius: 30px;
     }
     &__text__span{
         right:130px;
