--- a/src/styles/componentes/product--list.scss
+++ b/src/styles/componentes/product--list.scss
@@ -9,24 +9,36 @@
         padding: 20px;
         text-align: center;
         float: left;
+        border: 2px solid green;
+        border-radius: 35px;
 
         &:hover .button {
             opacity: 1;
         }
-        .product--list__text {
-            font-size: 15px;
-            font-family: arial, sans-serif;
-            justify-content: center;
-            padding: 10px;
-            font-style: italic;
-        }
-        .product--list__preco {
-            display: block;
-            font-style: italic;
-        }
-        .button {
-            opacity: 0;
-        }
+    }
+    &__text {
+        font-size: 20px;
+        font-family: arial, sans-serif;
+        justify-content: center;
+        padding: 10px;
+        font-style: italic;
+        font-weight: bold;
+        position: relative;
+        left: 8%;
+        margin: 0;
+    }
+    &__preco {
+        display: block;
+        // font-style: italic;
+        font-size: 25px;
+    }
+    .button {
+        opacity: 0;
+        position: relative;
+        left: 25%;
+        top: 10%;
+        width: 190px;
+        font-size: 15px;
     }
 
     &__img {
@@ -35,5 +47,4 @@
         flex: 0 0 200px;
         border-radius: 10px;
     }
-
 }
